fix missing var | v0.10.4

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.3</title>
+    <title>FIKO v0.10.4</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -537,9 +537,7 @@
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com"
           />
-          <p>
-            Article content goes here.
-          </p>
+          <p>Article content goes here.</p>
           <p>
             <a href="#" class="card-button">
               <button>Call to Action</button>
@@ -554,9 +552,7 @@
             alt="rokma.com"
           />
           <h2>Classic Article Card</h2>
-          <p>
-            Content goes here.
-          </p>
+          <p>Content goes here.</p>
           <p>
             <a href="#" class="card-button">
               <button>Call to Action</button>
@@ -667,10 +663,12 @@
           <header>
             <h2>text-wrap: balance</h2>
           </header>
-          <p class="container">
+          <p>
             Fiko headings use
-            <code>&lt;text-wrap: balance&gt;</code>.
-            <br><br>
+            <code>&lt;text-wrap: balance&gt;</code>
+            .
+            <br />
+            <br />
             Does this browser support it?
             <span class="supports_text_wrap_balance">
               Yes!
@@ -678,11 +676,17 @@
             <span class="no_supports_text_wrap_balance">
               Nope.
             </span>
-            <h4> This long h4 heading is here to show text wrap balance functionality. It's designed to improve readability.</h4>
-
-            <h5>Does it? This long h5 heading is here to let you see
-            if it makes any difference. Does it?</h5>
           </p>
+          <h4>
+            This long h4 heading is here to show text wrap
+            balance functionality. It's designed to improve
+            readability.
+          </h4>
+
+          <h5>
+            Does it? This long h5 heading is here to let you
+            see if it makes any difference. Does it?
+          </h5>
         </hgroup>
       </article>
       <hr />
@@ -744,8 +748,8 @@
               />
               <div class="body">
                 <p>
-                  Diam ridiculus fermentum vestibulum quam
-                  fames ad quis euismod rutrum lectus duis.
+                  Damn ridiculus fermentum fuckibulum quam
+                  fames ad quis spasmod rectum lectus jus.
                 </p>
               </div>
               <footer>footer</footer>
