--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.5</title>
+    <title>FIKO v0.10.6</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -260,7 +260,8 @@
             </summary>
 
             <p>
-              Need the accordion open at page load?
+              <strong>Need the accordion open</strong>
+              at page load?
               <code>&lt;details open&gt;</code>
               does just that!
             </p>
