--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.6</title>
+    <title>FIKO v0.10.7</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -22,7 +22,7 @@
       crossorigin
     />
     <style>
-      /* THIS STYLES BELONGS ONLY TO THE DEMO INDEX PAGE, SO THEY */
+      /* THIS STYLES BELONGS ONLY TO THE DEMO INDEX PAGE */
 
       .supports_text_wrap_balance {
         display: none;
@@ -110,7 +110,7 @@
         animation-fill-mode: both;
       }
 
-      /* TO RUN A DIFFERENT COLOUR, DECLARE LIKE THIS: */
+      /* TO RUN A DIFFERENT COLOUR, DECLARE IT LIKE THIS: */
       /* @layer root {
         :root {
           --color-light: lightblue;
