--- a/package/index.html
+++ b/package/index.html
@@ -882,17 +882,18 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          CSS &copy;2023 Toybreaker
+          v0.10.7
         </p>
 
-        <nav class="">
+        <nav>
           <ul>
+            <li><small>&copy; 2024 Toybreaker |</small></li>
             <li>
               <a
                 target="_blank"
                 href="https://github.com/toybreaker/fiko"
               >
-                <small>Github</small>
+                <small>Github |</small>
               </a>
             </li>
             <li>
@@ -900,15 +901,16 @@
                 target="_blank"
                 href="https://www.npmjs.com/package/fiko"
               >
-                <small>Npm</small>
+                <small>Npm |</small>
               </a>
+            </li>
+            <li>
+              <small>
+                <a id="pixelratio"></a>
+              </small>
             </li>
           </ul>
         </nav>
-
-        <p>
-          <small><a id="pixelratio"></a></small>
-        </p>
       </article>
     </footer>
     <script>
