--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.10.8</title>
+    <title>FIKO v0.11.0</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -194,9 +194,9 @@
           <h2>Full-bleed layouts</h2>
           <p>
             Without the
-            <code>&lt;.container&gt;</code>
-            class, elements have no horizontal spacing, as
-            the following image:
+            <code>&lt;... class="container"&gt;</code>
+            , elements have no horizontal spacing, as the
+            following image:
           </p>
         </hgroup>
       </section>
@@ -486,31 +486,31 @@
               Fat vertical spacing for
               <em>Readablity!</em>
             </small>
-            <h1>
-              h1 FIKO
-              <span class="greyscale">🐸</span>
-            </h1>
-            <h2>
-              h2 FIKO
-              <span class="greyscale">🐸</span>
-            </h2>
-            <h3>
-              h3 FIKO
-              <span class="greyscale">🐸</span>
-            </h3>
-            <h4>
-              h4 FIKO
-              <span class="greyscale">🐸</span>
-            </h4>
-            <h5>
-              h4 FIKO
-              <span class="greyscale">🐸</span>
-            </h5>
-            <h6>
-              h6 FIKO
-              <span class="greyscale">🐸</span>
-            </h6>
           </hgroup>
+          <h1>
+            h1 FIKO
+            <span class="greyscale">🐸</span>
+          </h1>
+          <h2>
+            h2 FIKO
+            <span class="greyscale">🐸</span>
+          </h2>
+          <h3>
+            h3 FIKO
+            <span class="greyscale">🐸</span>
+          </h3>
+          <h4>
+            h4 FIKO
+            <span class="greyscale">🐸</span>
+          </h4>
+          <h5>
+            h5 FIKO
+            <span class="greyscale">🐸</span>
+          </h5>
+          <h6>
+            h6 FIKO
+            <span class="greyscale">🐸</span>
+          </h6>
         </section>
         <hr />
 
@@ -522,7 +522,7 @@
             <code>&lt;article&gt;</code>
             renders as a card. Use it to centre children
             horizontally. No border unless:
-            <code>&lt;class="border"&gt;</code>
+            <code>&lt;article class="border"&gt;</code>
             .
           </p>
           <p>Here it wraps an image.</p>
@@ -882,7 +882,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.10.8
+          v0.11.0
         </p>
 
         <nav>
