cleanup+ fix text size | v0.11.1

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.11.0</title>
+    <title>FIKO v0.11.1</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -555,7 +555,7 @@
           />
           <p>Article content goes here.</p>
           <p>
-            <a href="#" class="card-button">
+            <a href="#">
               <button>Call to Action</button>
             </a>
           </p>
@@ -570,7 +570,7 @@
           <h2>Classic Article Card</h2>
           <p>Content goes here.</p>
           <p>
-            <a href="#" class="card-button">
+            <a href="#">
               <button>Call to Action</button>
             </a>
           </p>
@@ -882,7 +882,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.11.0
+          v0.11.1
         </p>
 
         <nav>
