--- a/package/index.html
+++ b/package/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.11.1</title>
+    <title>FIKO v0.12.0</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <meta name="color-scheme" content="light dark" />
+    <!-- <meta name="color-scheme" content="light dark" /> -->
 
     <link rel="stylesheet" href="fiko.css" />
     <link
@@ -882,7 +882,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.11.1
+          v0.12.0
         </p>
 
         <nav>
