better button + heading  | v0.14.0

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.13.1</title>
+    <title>FIKO v0.14.0</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -484,10 +484,13 @@
         <section>
           <hgroup>
             <h2>Headings</h2>
-            <small>
+            <p>
               Fat vertical spacing for
-              <em>Readablity!</em>
-            </small>
+              <em>Clarity!</em>
+              and a small line-height cos they look better
+              and there is no need for big space since
+              Headings are big and readable anyway.
+            </p>
           </hgroup>
           <h1>
             h1 FIKO
@@ -918,7 +921,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.13.1
+          v0.14.0
         </p>
 
         <nav>
