fix ol, ul, toggle > components | v0.15.0

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.14.4</title>
+    <title>FIKO v0.15.0</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -292,6 +292,29 @@
             </p>
           </details>
         </section>
+
+        <div class="space"></div>
+        <section>
+          <hgroup>
+            <h2>Lists</h2>
+          </hgroup>
+
+          <h3>Unordered list</h3>
+          <ul>
+            <li>first</li>
+            <li>second</li>
+            <li>third</li>
+          </ul>
+
+          <h3>Ordered list</h3>
+          <ol>
+            <li>first</li>
+            <li>second</li>
+            <li>third</li>
+          </ol>
+        </section>
+
+        <hr />
 
         <div class="space"></div>
 
@@ -863,6 +886,22 @@
           </div>
         </div>
       </section>
+
+      <section class="centre">
+        <hgroup>
+          <h2>JS Light | Dark theme toggle</h2>
+        </hgroup>
+        <p>
+          It's currently using JS, look at this page source
+          code to grab it!
+        </p>
+        <p>
+          <small>
+            Note: the necessary css styles for the toggle
+            are already included in the component layer.
+          </small>
+        </p>
+      </section>
       <!--
       <hr />
 
@@ -896,7 +935,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.14.4
+          v0.15.0
         </p>
 
         <nav>
