+ basic link style s &:hover | v0.15.1

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.15.0</title>
+    <title>FIKO v0.15.1</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -302,7 +302,10 @@
           <h3>Unordered list</h3>
           <ul>
             <li>first</li>
-            <li>second</li>
+            <li>
+              second with
+              <a href="#">link</a>
+            </li>
             <li>third</li>
           </ul>
 
@@ -935,7 +938,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          v0.15.0
+          v0.15.1
         </p>
 
         <nav>
