--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FIKO v0.16.1</title>
+    <title>FIKO v0.17.0</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -324,9 +324,66 @@
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Services</a></li>
-              <li>Design</li>
+              <li><a href="#">Design</a></li>
             </ul>
           </nav>
+        </section>
+
+        <hr class="space" />
+
+        <section>
+          <hgroup>
+            <h2>Horizontal line</h2>
+          </hgroup>
+          <br />
+
+          <p>Paragraph before the horizontal line.</p>
+          <hr />
+          <p>Paragraph after the horizontal line.</p>
+        </section>
+
+        <div class="space"></div>
+
+        <section>
+          <hgroup>
+            <h2>Horizontal ruler and spacer</h2>
+          </hgroup>
+          <code>&lt;hr class="space"&gt;</code>
+          will provide an horizontal ruler with vertical
+          padding, useful to separate sections, like the one
+          here:
+        </section>
+
+        <hr class="space" />
+
+        <section>
+          <hgroup>
+            <h2>Spacer</h2>
+          </hgroup>
+          <p>Before the Spacer</p>
+          <div class="space"></div>
+          <p>After the Spacer</p>
+
+          <p>
+            <code>&lt;... class="space"&gt;</code>
+            will provide a spacer with vertical padding,
+            useful to separate sections.
+          </p>
+        </section>
+
+        <hr />
+
+        <section>
+          <hgroup>
+            <h2>Links</h2>
+          </hgroup>
+          <p><a href="#">I am a link</a></p>
+
+          <p>
+            <a href="#" class="secondary">
+              I am a secondary link
+            </a>
+          </p>
         </section>
 
         <hr />
@@ -353,6 +410,38 @@
             <li>second</li>
             <li>third</li>
           </ol>
+        </section>
+
+        <hr />
+
+        <section>
+          <hgroup>
+            <h2>Buttons</h2>
+          </hgroup>
+
+          <a href="#" role="button">Button</a>
+          <a href="#" role="button" disabled>Disabled</a>
+        </section>
+
+        <section>
+          <a href="#" role="button" class="full">Full</a>
+          <a href="#" role="button" class="full" disabled>
+            Full Disabled
+          </a>
+        </section>
+
+        <section>
+          <a href="#" role="button" class="secondary">
+            Secondary
+          </a>
+          <a
+            href="#"
+            role="button"
+            class="secondary"
+            disabled
+          >
+            Secondary Disabled
+          </a>
         </section>
 
         <hr />
@@ -665,105 +754,16 @@
           </article>
         </section>
 
-        <hr />
-
-        <section>
-          <hgroup>
-            <h2>Horizontal line</h2>
-          </hgroup>
-          <br />
-
-          <p>Paragraph before the horizontal line.</p>
-          <hr />
-          <p>Paragraph after the horizontal line.</p>
-        </section>
-
         <div class="space"></div>
-
-        <section>
-          <hgroup>
-            <h2>Horizontal ruler and spacer</h2>
-          </hgroup>
-          <code>&lt;hr class="space"&gt;</code>
-          will provide an horizontal ruler with vertical
-          padding, useful to separate sections, like the one
-          here:
-        </section>
-
-        <hr class="space" />
-
-        <section>
-          <hgroup>
-            <h2>Spacer</h2>
-          </hgroup>
-          <p>Before the Spacer</p>
-          <div class="space"></div>
-          <p>After the Spacer</p>
-
-          <p>
-            <code>&lt;... class="space"&gt;</code>
-            will provide a spacer with vertical padding,
-            useful to separate sections.
-          </p>
-        </section>
-
-        <hr class="space" />
-
-        <section>
-          <hgroup>
-            <h2>Links</h2>
-          </hgroup>
-          <p><a href="#">I am a link</a></p>
-
-          <p>
-            <a href="#" class="secondary">
-              I am a secondary link
-            </a>
-          </p>
-        </section>
-
-        <hr />
-
-        <div class="space"></div>
-
-        <section>
-          <hgroup>
-            <h2>Buttons</h2>
-          </hgroup>
-
-          <a href="#" role="button">Button</a>
-          <a href="#" role="button" disabled>Disabled</a>
-        </section>
-
-        <section>
-          <a href="#" role="button" class="full">Full</a>
-          <a href="#" role="button" class="full" disabled>
-            Full Disabled
-          </a>
-        </section>
-
-        <section>
-          <a href="#" role="button" class="secondary">
-            Secondary
-          </a>
-
-          <a
-            href="#"
-            role="button"
-            class="secondary"
-            disabled
-          >
-            Secondary Disabled
-          </a>
-        </section>
       </div>
 
       <hr class="space" />
+
       <!-- FULL WIDTH -->
 
       <h2 class="centre">FULL WIDTH</h2>
 
-      <hr class="space" />
+      <div class="space"></div>
 
       <article>
         <hgroup>
@@ -991,7 +991,7 @@
         <small>
           FIKO
           <span class="invert">🐸</span>
-          v0.16.1
+          v0.17.0
 
           <div>
             <a
